tests/fail/or.py
5 or 5
None or 5
5 or None
